sfdx-source/LabsActionPlans/main/default/objects/ActionPlan__c/fields/Account__c.field-meta.xml
<CustomField>
	<fullName>Account__c</fullName>
	<deleteConstraint>SetNull</deleteConstraint>
	<label>Account</label>
	<description>Related Account</description>
	<referenceTo>Account</referenceTo>
	<relationshipLabel>Action Plans</relationshipLabel>
	<relationshipName>Action_Plans</relationshipName>
	<type>Lookup</type>
</CustomField>