sfdx-source/LabsActionPlans/main/default/objects/ActionPlan__c/fields/Action_Plan_Template__c.field-meta.xml
<CustomField>
    <fullName>Action_Plan_Template__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>If the Action Plan was created from a Template, it is related via this field</description>
    <label>Action Plan Template</label>
    <referenceTo>ActionPlanTemplate__c</referenceTo>
    <relationshipLabel>Action Plans</relationshipLabel>
    <relationshipName>ActionPlans</relationshipName>
    <type>Lookup</type>
</CustomField>