sfdx-source/LabsActionPlans/main/default/objects/ActionPlan__c/fields/Campaign__c.field-meta.xml
<CustomField>
	<fullName>Campaign__c</fullName>
	<deleteConstraint>SetNull</deleteConstraint>
	<label>Campaign</label>
	<description>Related Campaign</description>
	<referenceTo>Campaign</referenceTo>
	<relationshipLabel>Action Plans</relationshipLabel>
	<relationshipName>Action_Plans</relationshipName>
	<type>Lookup</type>
</CustomField>