sfdx-source/LabsActionPlans/main/default/objects/ActionPlan__c/fields/Completed__c.field-meta.xml
<CustomField>
	<fullName>Completed__c</fullName>
	<description>The number of completed tasks of the Action Plan</description>
	<inlineHelpText>The number of completed tasks of the Action Plan</inlineHelpText>
	<label>Completed</label>
	<summaryFilterItems>
		<field>APTask__c.IsClosed__c</field>
		<operation>equals</operation>
		<value>True</value>
	</summaryFilterItems>
	<summaryForeignKey>APTask__c.Action_Plan__c</summaryForeignKey>
	<summaryOperation>count</summaryOperation>
	<type>Summary</type>
</CustomField>