sfdx-source/LabsActionPlans/main/default/objects/ActionPlan__c/fields/Contact__c.field-meta.xml
<CustomField>
	<fullName>Contact__c</fullName>
	<deleteConstraint>SetNull</deleteConstraint>
	<label>Contact</label>
	<referenceTo>Contact</referenceTo>
	<relationshipLabel>Action Plans</relationshipLabel>
	<relationshipName>Action_Plans</relationshipName>
	<type>Lookup</type>
</CustomField>