sfdx-source/LabsActionPlans/main/default/objects/ActionPlan__c/fields/Contract__c.field-meta.xml
<CustomField>
	<fullName>Contract__c</fullName>
	<deleteConstraint>SetNull</deleteConstraint>
	<label>Contract</label>
	<referenceTo>Contract</referenceTo>
	<relationshipLabel>Action Plans</relationshipLabel>
	<relationshipName>Action_Plans</relationshipName>
	<type>Lookup</type>
</CustomField>