sfdx-source/LabsActionPlans/main/default/objects/ActionPlan__c/fields/Description__c.field-meta.xml
<CustomField>
	<fullName>Description__c</fullName>
	<description>The description of the Action Plan.</description>
	<label>Description</label>
	<type>TextArea</type>
</CustomField>