sfdx-source/LabsActionPlans/main/default/objects/ActionPlan__c/fields/Lead__c.field-meta.xml
<CustomField>
	<fullName>Lead__c</fullName>
	<deleteConstraint>SetNull</deleteConstraint>
	<label>Lead</label>
	<referenceTo>Lead</referenceTo>
	<relationshipLabel>Action Plans</relationshipLabel>
	<relationshipName>Action_Plans</relationshipName>
	<type>Lookup</type>
</CustomField>