sfdx-source/LabsActionPlans/main/default/objects/ActionPlan__c/fields/Plan_Progress__c.field-meta.xml
<CustomField>
    <fullName>Plan_Progress__c</fullName>
    <description>Completed tasks vs total tasks</description>
    <formula>IF(Total__c != 0,
Completed__c / Total__c,
0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Plan Progress</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>