sfdx-source/LabsActionPlans/main/default/objects/ActionPlan__c/fields/Related_Record__c.field-meta.xml
<CustomField>
    <fullName>Related_Record__c</fullName>
    <description>The displayed field (Name for most objects) of the related record for the Action Plan.</description>
    <label>Related Record</label>
    <length>255</length>
    <type>Text</type>
</CustomField>