sfdx-source/LabsActionPlans/main/default/objects/ActionPlan__c/fields/SkipDay__c.field-meta.xml
<CustomField>
	<fullName>SkipDay__c</fullName>
	<description>Skip Day</description>
	<label>Default Weekend Due Dates To</label>
	<type>Picklist</type>
	<valueSet>
		<controllingField>SkipWeekends__c</controllingField>
		<restricted>true</restricted>
		<valueSetName>SkipDay</valueSetName>
	</valueSet>
</CustomField>