sfdx-source/LabsActionPlans/main/default/objects/ActionPlan__c/fields/Task_Status_Formula__c.field-meta.xml
<CustomField>
    <fullName>Task_Status_Formula__c</fullName>
    <description>Display the number of completed tasks and total tasks for this Action Plan</description>
    <formula>TEXT(Completed__c ) &amp; &quot; &quot; &amp;  $Label.labsactionplans__ap_of &amp; &quot; &quot; &amp;  text(Total__c) &amp; &quot; &quot; &amp;  $Label.labsactionplans__ap_taskscomplete</formula>
    <label>Action Plan Status</label>
    <type>Text</type>
</CustomField>