sfdx-source/LabsActionPlans/main/default/objects/ActionPlan__c/fields/TaskRecordTypeID__c.field-meta.xml
<CustomField>
    <fullName>TaskRecordTypeID__c</fullName>
    <description>The Record Type Id (not label) of the Tasks for this Action Plan</description>
    <label>Tasks Record Type</label>
    <length>18</length>
    <type>Text</type>
</CustomField>