sfdx-source/LabsActionPlans/main/default/objects/ActionPlan__c/fields/Total__c.field-meta.xml
<CustomField>
	<fullName>Total__c</fullName>
	<description>The total number of tasks on the Action Plan.</description>
	<inlineHelpText>The total number of tasks on the Action Plan.</inlineHelpText>
	<label>Total Tasks</label>
	<summaryForeignKey>APTask__c.Action_Plan__c</summaryForeignKey>
	<summaryOperation>count</summaryOperation>
	<type>Summary</type>
</CustomField>