sfdx-source/LabsActionPlans/main/default/objects/ActionPlan__c/validationRules/Cannot_clear_Template_field.validationRule-meta.xml
<ValidationRule>
    <fullName>Cannot_clear_Template_field</fullName>
    <active>true</active>
    <description>Once set, the Action Plan Template field cannot be changed. (It can be cleared by deleting the template.)</description>
    <errorConditionFormula>!ISBLANK(  PRIORVALUE( Action_Plan_Template__c ) )
&amp;&amp;
(ISBLANK( Action_Plan_Template__c ) || ISCHANGED(  Action_Plan_Template__c ))</errorConditionFormula>
    <errorMessage>Cannot change Template value once it is set</errorMessage>
</ValidationRule>